added side bar model for user profile

--- a/AdminLTE-3.1.0/pages/examples/Mohit.html
+++ b/AdminLTE-3.1.0/pages/examples/Mohit.html
@@ -829,7 +829,7 @@
 
           <!-- PROFILE DROPDOWN -->
           <div class="dropdown">
-            <img src="./images/userimg.jpg" class="profile-img" data-bs-toggle="dropdown" />
+            <img src="../images/userimg.jpg" class="profile-img" data-bs-toggle="dropdown" />
             <ul class="dropdown-menu dropdown-menu-end shadow">
               <li class="user-box">
                 <h6>Login New User</h6>
@@ -853,14 +853,9 @@
               </li>
             </ul>
           </div>
-
-
         </div>
       </div>
     </nav>
-
-
-
 
     <!-- profile popup  -->
     <div class="modal fade right-modal" id="profileModal" tabindex="-1">
@@ -872,7 +867,7 @@
           </span>
 
           <div class="modal-body text-center p-4">
-            <img src="./images/userimg.jpg" class="profile-photo mb-3">
+            <img src="../images/userimg.jpg" class="profile-photo mb-3">
             <h5 class="user-name">Pravesh Ahamad</h5>
             <p class="user-email">@parvesahamad</p>
 
