--- a/AdminLTE-3.1.0/pages/examples/UserProfilepage.html
+++ b/AdminLTE-3.1.0/pages/examples/UserProfilepage.html
@@ -15,8 +15,6 @@
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css" />
 
 
-  <!-- BOOTSTRAP 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- ICONS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
@@ -24,6 +22,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
   <style>
     body,
     .sidebar-mini {
@@ -203,30 +202,17 @@
     .main-sidebar {
       background-color: #ffffff;
     }
+  </style>
 
-
-
-
-
-
-
-
-
+  <style>
     /* user profile view page css ------------------------------- */
 
-
-
-
-
-
-
-    /* Profile Header Card */
     .profile-header-card {
       background: #fff;
       border-radius: 16px;
       padding: 30px;
       box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.06);
-      margin-bottom: 25px;
+      margin-bottom: 20px;
       display: flex;
       align-items: center;
       gap: 25px;
@@ -241,19 +227,9 @@
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #f0f2f5;
+      border: 4px solid #e4edfe;
     }
 
-    .profile-info-section {
-      flex: 1;
-    }
-
-    .profile-name-row {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      margin-bottom: 10px;
-    }
 
     .profile-name-row h1 {
       font-size: 28px;
@@ -285,15 +261,15 @@
       display: flex;
       gap: 25px;
       flex-wrap: wrap;
-      margin-top: 12px;
+      margin-top: 14px;
     }
 
     .meta-item {
       display: flex;
       align-items: center;
       gap: 8px;
-      color: #666;
-      font-size: 14px;
+      color: #565656;
+      font-size: 16px;
     }
 
     .meta-item i {
@@ -317,10 +293,6 @@
       transition: 0.3s;
     }
 
-    .btn-primary-custom {
-      background: #38487c;
-      color: #fff;
-    }
 
     .btn-primary-custom:hover {
       background: #2a3560;
@@ -340,7 +312,8 @@
     .info-section {
       background: #fff;
       border-radius: 16px;
-      padding: 30px;
+      padding: 20px;
+      margin-bottom: 20px;
       box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.06);
     }
 
@@ -348,20 +321,14 @@
       font-size: 18px;
       font-weight: 600;
       color: #2c3e50;
-      margin-bottom: 25px;
+      margin-bottom: 15px;
       padding-bottom: 15px;
       border-bottom: 1.5px solid #f0f2f5;
     }
 
-    .info-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-    }
-
     .info-item {
-      background: #f8f9fb;
-      padding: 18px;
+      background: #f1f3f6;
+      padding: 15px;
       border-radius: 12px;
       border-left: 3px solid #38487c;
     }
@@ -388,10 +355,6 @@
 
     /* Responsive */
     @media (max-width: 768px) {
-      body {
-        padding: 15px;
-      }
-
       .profile-header-card {
         flex-direction: column;
         text-align: center;
@@ -416,9 +379,6 @@
         width: 100%;
       }
 
-      .info-grid {
-        grid-template-columns: 1fr;
-      }
 
       .profile-name-row h1 {
         font-size: 24px;
@@ -434,6 +394,117 @@
       .section-title {
         font-size: 18px;
       }
+    }
+
+    /* document model css  */
+
+    .upload-modal {
+      border-radius: 18px;
+      box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.12);
+      border: none;
+    }
+
+    .modal-header-custom {
+      background: #f7f9fc;
+      padding: 18px 25px;
+      border-bottom: 1px solid #e7eaf0;
+      border-radius: 18px 18px 0 0;
+    }
+
+    .modal-title {
+      font-size: 20px;
+      font-weight: 700;
+      color: #2c3e50;
+    }
+
+    .close-btn-custom span {
+      font-size: 28px;
+      color: #2c3e50;
+      transition: 0.3s;
+    }
+
+    .close-btn-custom:hover span {
+      color: #38487c;
+      transform: rotate(90deg);
+    }
+
+    .modal-body {
+      padding: 25px;
+    }
+
+    .form-label-custom {
+      font-size: 14px;
+      font-weight: 600;
+      color: #38487c;
+      margin-bottom: 6px;
+    }
+
+    .input-custom {
+      border-radius: 10px;
+      padding: 12px 14px;
+      border: 1.5px solid #d9e2f3;
+      transition: 0.3s;
+    }
+
+    .input-custom:focus {
+      border-color: #38487c;
+      box-shadow: 0 0 0 3px rgba(56, 72, 124, 0.15);
+    }
+
+    .modal-footer-custom {
+      padding: 18px 25px;
+      border-top: 1px solid #e7eaf0;
+    }
+
+    .btn-primary-custom {
+      background: #38487c;
+      color: #fff;
+    }
+
+    .btn-primary-custom:hover {
+      background: #2a3560;
+      transform: translateY(-2px);
+    }
+
+    .btn-secondary-custom {
+      background: #f1f3f6;
+      color: #38487c;
+      font-weight: 600;
+      border-radius: 10px;
+    }
+
+    .btn-secondary-custom:hover {
+      background: #e0e3e8;
+    }
+
+    .file-input-wrapper {
+      position: relative;
+      width: 100%;
+    }
+
+    .input-file-custom {
+      border: 1.5px solid #d9e2f3;
+      background: #fff;
+      border-radius: 10px;
+      padding: 2px 14px;
+      width: 100%;
+      cursor: pointer;
+      color: #2c3e50;
+      font-size: 14px;
+    }
+
+
+
+    .input-file-custom::-webkit-file-upload-button {
+      background: #38487c;
+      color: #fff;
+      border: none;
+      padding: 5px 12px;
+      border-radius: 8px;
+      margin-right: 12px;
+      cursor: pointer;
+      transition: 0.3s;
+      font-weight: 600;
     }
   </style>
 </head>
@@ -1223,22 +1294,16 @@
       <section class="content">
 
 
-
-
-
-
-
-        <div class="">
-
+        <div class="container">
           <!-- Profile Header -->
           <div class="profile-header-card mt-3">
             <div class="profile-image-section">
-              <img src="https://i.pravatar.cc/300?u=udit" alt="Udit">
+              <img src="../images/userimg.jpg" alt="Udit">
             </div>
 
             <div class="profile-info-section">
               <div class="profile-name-row">
-                <h1>Udit Kumar</h1>
+                <h1 class="mb-2">Udit Kumar</h1>
                 <span class="status-badge pending">Pending</span>
               </div>
 
@@ -1249,111 +1314,236 @@
                 </div>
                 <div class="meta-item">
                   <i class="fa-solid fa-calendar-days"></i>
-                  <span>Date of Joining: Not Available</span>
+                  <span>Date of Joining: 08/08/2023</span>
                 </div>
               </div>
 
               <div class="action-buttons">
-                <button class="btn-custom btn-primary-custom">
-                  <i class="fa-solid fa-pen-to-square"></i> Edit Profile
-                </button>
-                <button class="btn-custom btn-secondary-custom">
+                <button class="btn-custom btn-secondary-custom" data-toggle="modal" data-target="#addDocumentModal">
                   <i class="fa-solid fa-file-arrow-up"></i> Add Document
                 </button>
+
               </div>
             </div>
           </div>
 
-          <!-- Personal Information -->
-          <div class="info-section">
-            <h2 class="section-title"><i class="fa-solid fa-user"></i> Personal Information</h2>
-            <div class="info-grid">
-              <div class="info-item">
-                <div class="info-label">Full Name</div>
-                <div class="info-value">Udit</div>
-              </div>
+          <!-- add document model  -->
 
-              <div class="info-item">
-                <div class="info-label">Email Address</div>
-                <div class="info-value">udit.kumar@klkindia.com</div>
-              </div>
+          <!-- ADD DOCUMENT MODAL -->
+          <div class="modal fade" id="addDocumentModal" tabindex="-1" aria-labelledby="addDocumentModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-md">
+              <div class="modal-content upload-modal">
 
-              <div class="info-item">
-                <div class="info-label">Contact Number</div>
-                <div class="info-value">9218024809</div>
-              </div>
+                <div class="modal-header modal-header-custom">
+                  <h5 class="modal-title" id="addDocumentModalLabel">Upload Document</h5>
+                  <button type="button" class="close close-btn-custom" data-dismiss="modal">
+                    <span>&times;</span>
+                  </button>
+                </div>
 
-              <div class="info-item">
-                <div class="info-label">Assigned State</div>
-                <div class="info-value">Bihar</div>
-              </div>
-            </div>
-          </div>
+                <div class="modal-body">
+                  <form id="uploadDocumentForm">
 
-          <br>
+                    <!-- SELECT FILE -->
+                    <div class="form-group">
+                      <label class="form-label-custom" for="documentFile">Select File *</label>
+                      <input type="file" class="form-control input-file-custom" id="documentFile" required>
+                    </div>
 
-          <!-- Bank Details -->
-          <div class="info-section">
-            <h2 class="section-title"><i class="fa-solid fa-building-columns"></i> Bank Details</h2>
-            <div class="info-grid">
-              <div class="info-item">
-                <div class="info-label">Bank Name</div>
-                <div class="info-value empty">Not Provided</div>
-              </div>
 
-              <div class="info-item">
-                <div class="info-label">Account Number</div>
-                <div class="info-value empty">Not Provided</div>
-              </div>
+                    <!-- DOCUMENT TYPE -->
+                    <div class="form-group">
+                      <label class="form-label-custom" for="documentType">Document Type *</label>
+                      <input type="text" class="form-control input-custom" id="documentType"
+                        placeholder="Ex: Aadhaar / PAN / Offer Letter" required>
+                    </div>
 
-              <div class="info-item">
-                <div class="info-label">IFSC Code</div>
-                <div class="info-value empty">Not Provided</div>
+                  </form>
+                </div>
+
+                <div class="modal-footer modal-footer-custom">
+                  <button type="button" class="btn btn-secondary-custom" data-dismiss="modal">Cancel</button>
+                  <button type="submit" form="uploadDocumentForm" class="btn btn-primary-custom">Save</button>
+                </div>
+
               </div>
             </div>
           </div>
         </div>
 
 
+        <!-- added document section -->
+<!-- added document section -->
+<div class="info-section" id="documentSection" style="display:none;">
+  <div class="row" id="documentList"></div>
+</div>
 
 
+        <!-- Personal Information -->
+        <div class="info-section">
+          <h2 class="section-title"><i class="fa-solid fa-user"></i> Personal Information</h2>
 
+          <div class="row g-3">
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Full Name</div>
+                <div class="info-value">Udit</div>
+              </div>
+            </div>
 
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Email Address</div>
+                <div class="info-value">udit.kumar@klkindia.com</div>
+              </div>
+            </div>
 
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Contact Number</div>
+                <div class="info-value">9218024809</div>
+              </div>
+            </div>
 
-        <!-- footer section -->
-        <section class="">
-          <div class="container">
-            <div class="row">
-              <footer class="footer-area py-2">
-                <p class="m-0 fw-semibold text-secondary small footer-text">
-                  Copyright © <span id="year"></span> KLK ERP — By
-                  <span class="text-primary fw-bold">ETS NETWORKS.</span>
-                  All rights reserved.
-                </p>
-              </footer>
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Assigned State</div>
+                <div class="info-value">Bihar</div>
+              </div>
             </div>
           </div>
-        </section>
-      </section>
-      <!-- /.content -->
+        </div>
+
+
+        <div class="info-section">
+          <h2 class="section-title"><i class="fa-solid fa-building-columns"></i> Bank Details</h2>
+
+          <div class="row g-3">
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Name</div>
+                <div class="info-value empty">Super Admin</div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Email</div>
+                <div class="info-value empty">Superadmin@klkerp.com</div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Contact</div>
+                <div class="info-value empty">9560652530</div>
+              </div>
+            </div>
+
+
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Bank</div>
+                <div class="info-value empty">Not Provided</div>
+              </div>
+            </div>
+
+
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">Account No</div>
+                <div class="info-value empty">Not Provided</div>
+              </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4 mb-2">
+              <div class="info-item">
+                <div class="info-label">IFSC Code</div>
+                <div class="info-value empty">Not Provided</div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
     </div>
-    <!-- /.content-wrapper -->
 
 
 
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
+
+
+
+
+    <!-- footer section -->
+    <section class="">
+      <div class="container">
+        <div class="row">
+          <footer class="footer-area py-2">
+            <p class="m-0 fw-semibold text-secondary small footer-text">
+              Copyright © <span id="year"></span> KLK ERP — By
+              <span class="text-primary fw-bold">ETS NETWORKS.</span>
+              All rights reserved.
+            </p>
+          </footer>
+        </div>
+      </div>
+    </section>
+    </section>
+    <!-- /.content -->
+  </div>
+  <!-- /.content-wrapper -->
+
+
+
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+
+  </aside>
+  <!-- /.control-sidebar -->
   </div>
   <!-- ./wrapper -->
 
 
   <!-- Chart.js Library -->
 
+  <script>
+   document.getElementById("uploadDocumentForm").addEventListener("submit", function (e) {
+  e.preventDefault();
 
+  const fileInput = document.getElementById("documentFile");
+  const file = fileInput.files[0];
+  const docType = document.getElementById("documentType").value;
+
+  if (!file) return;
+
+  const fileName = file.name;
+
+  // Create new document card item
+  const newDocHTML = `
+    <div class="col-md-6 col-lg-4 mb-2">
+      <div class="info-item">
+        <div class="info-label">${docType}</div>
+        <div class="info-value" title="${fileName}">${fileName}</div>
+      </div>
+    </div>
+  `;
+
+  // Append to list
+  document.getElementById("documentList").insertAdjacentHTML("beforeend", newDocHTML);
+
+  // Show document section
+  document.getElementById("documentSection").style.display = "block";
+
+  // Reset & close modal
+  fileInput.value = "";
+  document.getElementById("documentType").value = "";
+  $('#addDocumentModal').modal('hide');
+});
+
+
+  </script>
 
   <!-- jQuery -->
   <script src="../../plugins/jquery/jquery.min.js"></script>
@@ -1363,7 +1553,6 @@
   <script src="../../dist/js/adminlte.min.js"></script>
   <!-- AdminLTE for demo purposes -->
   <script src="../../dist/js/demo.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
